--- a/src/style.css
+++ b/src/style.css
@@ -666,6 +666,13 @@ label {
 	max-width: 848px
 }
 
+.container-smm {
+	max-width: 1050px;
+	margin: 0 auto;
+	padding-left: 10px;
+	padding-right: 10px
+}
+
 .container .container-sm {
 	max-width: 800px;
 	padding-left: 0;
